# AdventOfCode

./: .gitignore
2015/day01/: main.py
2015/day02/: main.py
2015/day03/: main.py
2015/day04/: main.py
2015/day05/: main.py
2015/day06/: main.py
2015/day07/: main.py
2020/: Day10  Day10.cpp  Day11  Day11.cpp  Day12  Day12.cpp  Day2.cpp  Day3  Day5.cpp  Day6_retry  Day9  day7  input_day6.txt
2020/c++/: Day1  Day1.cpp  Day10  Day10.cpp  Day11.cpp  Day13.cpp  Day2  Day3.cpp  Day4  Day4.cpp  Day5  Day6  Day6.cpp  Day6_retry.cpp  Day8  Day8.cpp  Day9.cpp  day7.cpp  day7py.py  template.cpp
2020/python/: Day8.py
2021/day01/: main.cpp  main.nim  main.rs
2021/day02/: main.nim
2021/day03/: main.nim
2021/day04/: main.nim
2021/day05/: main.nim
2021/day06/: main.nim
2021/day07/: main.nim
2021/day08/: main.nim
2021/day09/: main.nim
2021/day1/: main
2021/day10/: main.nim
2021/day11/: main.nim
2021/day12/: main.cpp  main.nim
2021/day13/: input_coords.txt  main.nim
2021/day14/: input.txt  main.cpp
2021/day15/: main.cpp
2022/day05/: input.txt
2023/: setup.sh
2023/day01/: main.c  tmp.txt
2023/day02/: main.c
2023/day03/: main.c  tmp.txt
2023/day04/: main.c
2023/day05/: main.c
2023/day06/: main.c
2023/day07/: compile_flags.txt  main.c
2023/day08/: input.txt  main.c
2023/day09/: main.c
2023/day10/: main.c
2023/day11/: main.c
2023/day12/: main.c
2023/day13/: .clang-format  input.txt  main.c
2024/day04/: Cargo.toml
randomscripts/cpp_async_requests/: CMakeLists.txt  main.cpp
randomscripts/cpp_requests/: main.cpp  (+1 more)
(+38 files in other folders)
